# django-test-migrations

./: .travis.yml  LICENSE.md  README.md  mypy_django_settings.py  setup.cfg  setup.py  tox.ini
requirements/: code_style.txt  dev.txt  packaging.txt  pytest_extra.txt  testing.txt  type_checking.txt
test_migrations/: __init__.py  constants.py  migrator.py  migrator.pyi  mixins.py  mixins.pyi  settings.py
test_migrations/contrib/pytest_plugin/: fixtures.py  plugin.py
test_migrations/runners/: __init__.py  unittest.py  unittest.pyi
test_migrations/test_cases/: unittest.py  unittest.pyi
tests/integration/testing_project/: manage.py  requirements.txt  setup.cfg
tests/integration/testing_project/apps/polls/: __init__.py  apps.py  enums.py  factories.py  models.py
tests/integration/testing_project/apps/polls/migrations/: 0001_initial.py  0002_question_is_hard.py  0003_question_difficulty_level.py  0004_populate_question_difficulty_level_field.py  0005_censor_cheesy_words.py
tests/integration/testing_project/apps/polls/tests/migrations/pytest/: test_0004.py  test_0005.py
tests/integration/testing_project/apps/polls/tests/migrations/unittest/: test_0004.py  test_0005.py
tests/integration/testing_project/config/: runner.py  wsgi.py
tests/integration/testing_project/config/settings/: pytest.py  unittest.py
tests/pytest_plugin/: test_plugin.py
tests/pytest_plugin/data/: conftest.py  pytest.ini  test_marked_with_migration_marker.py  test_not_related_to_test_migrations.py  test_using_migrator_fixture.py
tests/unit/: conftest.py  test_migrator.py  test_mixins.py
tests/unit/runners/: test_unittest.py
