; TODO: add LICENSE.md to project
; [metadata]
; license_file = LICENSE.md

[tool:pytest]
addopts = -s
    --pylama
    --isort
    --doctest-modules
    --cov=test_migrations
    --cov-config=setup.cfg
pytester_example_dir = tests/pytest_plugin/data/
norecursedirs = data

[coverage:run]
branch = True
source = test_migrations/
data_file = .tests_reports/.coverage

[coverage:report]
skip_covered = True
show_missing = True
omit = tests/*,*.tox/*
sort = Cover

[coverage:xml]
output = .tests_reports/coverage.xml

[mypy]
python_version = 3.7
follow_imports_for_stubs = True
plugins =
    mypy_django_plugin.main

disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True

warn_unused_configs = True
warn_no_return = True
warn_return_any = True
warn_incomplete_stub = True
warn_unreachable = True

[mypy-pytest]
ignore_missing_imports = True

[mypy-test_migrations.contrib.*]
allow_untyped_calls = True
allow_untyped_defs = True
allow_untyped_decorators = True

[mypy.plugins.django-stubs]
django_settings_module = mypy_django_settings

[pylama]
skip = .git,tests/*,test_*
linters = pycodestyle,pyflakes,radon,pylint
format = pylint
max_line_length = 79

[pylama:pycodestyle]
; http://pycodestyle.pycqa.org/en/latest/intro.html#error-codes [PEP 8]
; -----------------------------------------------------------------------------
; E731: do not assign a lambda expression, use a def
; W503: Line break before binary operator
; -----------------------------------------------------------------------------
ignore = E731,W503

[pylama:pydocstyle]
; http://www.pydocstyle.org/en/2.1.1/error_codes.html [PEP 257]
; -----------------------------------------------------------------------------
; D100: Missing docstring in public module
; D101: Missing docstring in public class
; -----------------------------------------------------------------------------
ignore = D100,D101

; [pylama:pyflakes]
; builtins = _
; ignore = W401

[pylama:pylint]
; http://pylint-messages.wikidot.com/all-codes
; -----------------------------------------------------------------------------
; C0103: Invalid name "%s" (should match %s)
; C0111: Missing %s docstring
; ; E1101: %s %r has no %r member
; ; R0901: Too many ancestors (%s/%s)
; ; R0902: Too many instance attributes (%s/%s)
; ; R0903: Too few public methods (%s/%s)
; ; R0904: Too many public methods (%s/%s)
; ; R0913: Too many arguments (%s/%s)
; ; R0915: Too many statements (%s/%s)
; ; W0141: Used builtin function %r
; ; W0142: Used * or ** magic
; ; W0221: Arguments number differs from %s method
; ; W0232: Class has no __init__ method
; ; W0613: Unused argument %r
; ; W0631: Using possibly undefined loop variable %r
; ; W0511: TODO in comments
; ; R0201: Method could be a function
; ; W1023: Use % formatting in logging functions
; ; C0325: Unnecesary parens after 'in' keyword
; ; W1113: Keyword argument before variable positional arguments list
; -----------------------------------------------------------------------------
; rcfile=.pylintrc
disable = C0111,C0103 ;,E1101,R0901,R0902,R0903,R0904,R0913,R0915,W0141,W0142,W0221,W0232,W0613,W0631,
          W0108,W0511,R0201,W1203,E0012,C0325,W1113

; [pylama:radon]
; ; http://radon.readthedocs.io/en/latest/intro.html
; ; -----------------------------------------------------------------------------
; ; CC score   Rank   Risk
; ; 1 - 5      A      low - simple block
; ; 6 - 10     B      low - well structured and stable block
; ; 11 - 20    C      moderate - slightly complex block
; ; 21 - 30    D      more than moderate - more complex block
; ; 31 - 40    E      high - complex block, alarming
; ; 41+        F      very high - error-prone, unstable block
; ; -----------------------------------------------------------------------------
; ; MI score	Rank    Maintainability
; ; 100 - 20	A	    Very high
; ; 19 - 10	B	    Medium
; ; 9 - 0	    C	    Extremely low
; ; -----------------------------------------------------------------------------
; complexity = 10
; show_closures = True
; no_assert = True

[isort]
line_length = 79
indent = 4
# use Vertical Hanging Indent mode
multi_line_output = 3
# add one line between `import abc` and `from abc import ABC`
lines_between_types = 1
# add a trailing comma to the end of from imports
include_trailing_comma = 1
# split imports to multline, when 2 or more imports in one line
force_grid_wrap = 2
# Django related settings
known_django = django
# add projects module to first party category
known_first_party = test_migrations
# place imports, which section cannot be determined to third party category
default_section = THIRDPARTY
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
